# dgx-spark-playbooks

./: LICENSE-3rd-party  README.md
nvidia/cli-coding-agent/: README.md
nvidia/comfy-ui/: README.md
nvidia/connect-three-sparks/: README.md
nvidia/connect-to-your-spark/: README.md
nvidia/connect-two-sparks/: README.md
nvidia/cuda-x-data-science/: README.md
nvidia/cutile-kernels/: README.md
nvidia/dgx-dashboard/: README.md
nvidia/flux-finetuning/: README.md
nvidia/isaac/: README.md
nvidia/jax/: README.md
nvidia/live-vlm-webui/: README.md
nvidia/llama-cpp/: README.md
nvidia/llama-factory/: README.md
nvidia/lm-studio/: README.md
nvidia/multi-agent-chatbot/: README.md
nvidia/multi-modal-inference/: README.md
nvidia/multi-sparks-through-switch/: README.md
nvidia/nccl/: README.md
nvidia/nemo-fine-tune/: README.md
nvidia/nemoclaw/: README.md
nvidia/nemotron/: README.md
nvidia/nim-llm/: README.md
nvidia/nvfp4-quantization/: README.md
nvidia/ollama/: README.md
nvidia/open-webui/: README.md
nvidia/openclaw/: README.md
nvidia/openshell/: README.md
nvidia/portfolio-optimization/: README.md
nvidia/pytorch-fine-tune/: README.md
website/: MIGRATION_PLAN.md  README.md  docusaurus.config.ts  package-lock.json
website-next/: package-lock.json  package.json
website/docs/playbooks/portfolio-optimization/assets/setup/: pyproject.toml  start_playbook.sh
website/docs/playbooks/portfolio-optimization/assets/setup/src/: __init__.py  backtest.py  cvar_data.py  cvar_optimizer.py  cvar_parameters.py  index.md  portfolio.py
(+138 files in other folders)
